# kathirmani

./: .env.example  .gitignore  Dockerfile.app  Makefile  PLATFORM.md  README.md  cleanup.sh  conftest.py  docker-compose.gpu.yml  docker-compose.observability.yml  docker-compose.platform.yml  docker-compose.yml  download_model.py  learning.md  oss_ingestion_nvidia_model_plugin_master_plan_v2.md  pyproject.toml  requirements.txt  run.sh  run_inference.py  serve_metrics.py  setup.sh  start_stack.sh  viz_app.py
agents-memory/: README.md  memory.md
agents-memory/sessions/: 2026-05-29-refactor.md  2026-06-03-phase-0-skeleton.md  2026-06-03-phase-1-ingestion.md  2026-06-03-platform-plan.md  2026-06-04-phase-2-complete.md  2026-06-05-design-figures-and-ai-image-gen.md  2026-06-10-pending-followups-and-console.md  2026-06-11-docs-sync-and-test-verify.md  2026-06-16-per-model-dashboards-run-hook.md  2026-06-16-rename-marlin-to-kathirmani.md  2026-06-16-spec-v3-capability-hooks.md  2026-07-08-underscore-package-refactor.md
ai-workers/cv-oss-worker/: __init__.py  plugin.py  pytest.ini  tracking.py  worker.py  zones.py
ai-workers/embedding-worker/: __init__.py  indexer.py  plugin.py  pytest.ini  search.py  worker.py
ai-workers/vlm-worker/: __init__.py  host.py  parser.py  plugin.py  prompts.py  pytest.ini  worker.py
ai-workers/vss-eval-worker/: __init__.py  lvs.py  parity.py  pytest.ini  summarizer.py  worker.py
ai_workers/: __init__.py
benchmarks/: __init__.py  harness.py  run.py  tco.py
benchmarks/bakeoff/: run.py  (+5 more)
configs/: cameras.yaml  event_rules.yaml  models.yaml  retention.yaml
db/: __init__.py  db.py  schema.sql
design/: INFOGRAPHIC-BRIEF.md  ai_images.py  make_figures.py  make_status.py
grafana/: dashboard.json  dashboard_cameras.json  dashboard_economy.json  dashboard_fused.json  dashboard_loki.json  dashboard_model_performance.json  dashboard_model_runtime.json  dashboard_pipeline.json  dashboard_qwen.json  setup_grafana.sh
inference/: annotations.py  loki.py  metrics.py  pipeline.py  qwen_vl.py
ingestion/: __init__.py  __main__.py  bus.py  config.py  health.py  ingest.py  metadata.py  metrics.py  records.py  segmenter.py  sources.py  storage.py  thumbnailer.py  windows.py
model_plugins/: __init__.py
models/: PROVENANCE.json
observability/: README.md
prometheus/: prometheus.yml
requirements/: api.txt  base.txt  db.txt  design.txt  dev.txt  inference.txt  ingestion.txt  models.txt  observability.txt  optional.txt
results/: Kathirmani Bill Counter.json  Kathirmani Center Camera.json  Kathirmani Left Side Camera.json  Kathirmani Near Entry Door Camera.json  Kathirmani Right Side Cam.json  Kathirmani Store Near Bill Counter.json  Kathirmni Entry Cam.json  economy.json  fused.json  summary.json
scripts/: backfill_ingest.py  db_migrate.py  db_seed.py  fetch_models.py  render_dashboards.sh  setup_nvidia_docker.sh  validate_model_config.py
spec/: 00-master-plan-v2.md  01-overview.md  02-architecture.md  03-models-and-query-modes.md  04-observability-stack.md  05-performance-and-optimizations.md  06-hardware-portability.md  07-runbook.md  08-dashboards.md  09-repo-structure.md  10-platform-roadmap.md  11-model-plugin-policy.md  12-frameworks.md  13-models.md  14-console-and-deployment.md  14-plug-and-play-quality-pos-observability.md  15-quality-gate.md  16-capability-hooks-profiles-router.md  17-pos-and-time-alignment.md  18-multiview-tiered-inference.md  README.md
tests/: conftest.py  test_device.py  test_setup.py  test_structure.py
(+233 files in other folders)
