[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kathirmani"
version = "1.0.0"
description = "Marlin-2B + Qwen2.5-VL video intelligence over Kathirmani store cameras, portable across NVIDIA DGX (CUDA) and Apple Mac Studio (MPS)."
requires-python = ">=3.10"
# Runtime deps are pinned in requirements.txt; torch is installed per-machine by
# setup.sh (CUDA on DGX, MPS on Mac Studio, CPU elsewhere).
dependencies = [
    "transformers>=5.7.0",
    "accelerate",
    "qwen-vl-utils>=0.0.14",
    "torchcodec",
    "av",
    "pillow",
    "prometheus_client",
    "requests",
]

[project.scripts]
kathirmani-infer = "kathirmani.cli.run_inference:main"
kathirmani-download = "kathirmani.cli.download_model:main"
kathirmani-metrics = "kathirmani.serve_metrics:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# One flat run covers every component: each tests/ dir is a real package now,
# so a single pytest invocation collects them all without sys.path shims.
testpaths = [
    "tests",
    "ingestion/tests",
    "services/api/tests",
    "services/console/tests",
    "services/digital_twin/tests",
    "services/evidence_builder/tests",
    "services/review_ui/tests",
    "services/rule_engine/tests",
    "services/security/tests",
    "ai_workers/cv_oss_worker/tests",
    "ai_workers/vlm_worker/tests",
    "ai_workers/embedding_worker/tests",
    "ai_workers/vss_eval_worker/tests",
    "benchmarks/tests",
    "benchmarks/bakeoff/tests",
    "observability/tests",
]
